--- a/newsvendor-llm-experiment/pyproject.toml
+++ b/newsvendor-llm-experiment/pyproject.toml
@@ -26,6 +26,7 @@ click = "^8.1.0"
 pytest = "^7.4.0"
 pytest-asyncio = "^0.21.0"
 psutil = "^5.9.0"
+statsmodels = "^0.14.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
