--- a/newsvendor-llm-experiment/pyproject.toml
+++ b/newsvendor-llm-experiment/pyproject.toml
@@ -27,6 +27,7 @@ pytest = "^7.4.0"
 pytest-asyncio = "^0.21.0"
 psutil = "^5.9.0"
 statsmodels = "^0.14.4"
+kaleido = "0.2.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
