added grok from azure

--- a/newsvendor-llm-experiment/config/models.yaml
+++ b/newsvendor-llm-experiment/config/models.yaml
@@ -1,4 +1,4 @@
-# Model Configuration for Newsvendor Experiment v0.5
+# Model Configuration for Newsvendor Experiment v0.6 - No Token Limits!
 
 models:
   # Ultra-Compact Models
@@ -7,7 +7,6 @@ models:
     size_mb: 637
     size_gb: 0.6
     tier: "ultra"
-    token_limit: 256
     chattiness: "very_low"
     temperature: 0.3
     top_p: 0.8
@@ -19,7 +18,6 @@ models:
     size_mb: 934
     size_gb: 0.9
     tier: "ultra"
-    token_limit: 256
     chattiness: "low"
     temperature: 0.3
     top_p: 0.8
@@ -32,7 +30,6 @@ models:
     size_mb: 1600
     size_gb: 1.6
     tier: "compact"
-    token_limit: 384
     chattiness: "low"
     temperature: 0.4
     top_p: 0.85
@@ -44,7 +41,6 @@ models:
     size_mb: 2200
     size_gb: 2.2
     tier: "compact"
-    token_limit: 384
     chattiness: "low_medium"
     temperature: 0.4
     top_p: 0.85
@@ -56,7 +52,6 @@ models:
     size_mb: 2000
     size_gb: 2.0
     tier: "compact"
-    token_limit: 384
     chattiness: "medium_low"
     temperature: 0.4
     top_p: 0.85
@@ -69,7 +64,6 @@ models:
     size_mb: 4100
     size_gb: 4.1
     tier: "mid"
-    token_limit: 512
     chattiness: "medium"
     temperature: 0.5
     top_p: 0.9
@@ -81,7 +75,6 @@ models:
     size_mb: 4500
     size_gb: 4.5
     tier: "mid"
-    token_limit: 512
     chattiness: "medium"
     temperature: 0.5
     top_p: 0.9
@@ -94,36 +87,103 @@ models:
     size_mb: 5200
     size_gb: 5.2
     tier: "large"
-    token_limit: 512
     chattiness: "high"
     temperature: 0.6
     top_p: 0.95
     research_purpose: "Verbose control"
     architecture: "Qwen3"
 
-# Replication Strategy by Model Tier
+  # Remote Models - No Token Limits!
+  claude-sonnet-4-remote:
+    tier: "premium"
+    chattiness: "high"
+    temperature: 0.5
+    top_p: 0.9
+    research_purpose: "Premium reasoning and analysis"
+    architecture: "Claude Sonnet 4"
+    cost_per_token: 0.000075
+    provider: "AWS Bedrock"
+    max_tokens: null  # No artificial limits - use service maximum
+
+  o3-remote:
+    tier: "premium"
+    chattiness: "very_high"
+    temperature: 1.0
+    top_p: 0.95
+    research_purpose: "Advanced reasoning with thinking"
+    architecture: "O3 Mini"
+    cost_per_token: 0.000240
+    provider: "Azure OpenAI"
+    reasoning_enabled: true
+    max_tokens: null  # No artificial limits - let O3 reason fully
+
+  grok-remote:
+    tier: "premium"
+    chattiness: "high"
+    temperature: 1.0
+    top_p: 1.0
+    research_purpose: "Fast reasoning and wit via Azure AI"
+    architecture: "Grok 3 Mini"
+    cost_per_token: 0.000020
+    provider: "Azure AI Services"
+    model_name: "grok-3-mini"
+    api_version: "2024-05-01-preview"
+    endpoint: "https://newsvendor-playground-resource.services.ai.azure.com/models"
+    max_tokens: null  # No artificial limits - let Grok express naturally
+
+# Replication Strategy by Model Tier (Updated for Grok)
 replication_matrix:
   ultra_ultra: 50
   ultra_compact: 40
   ultra_mid: 30
   ultra_large: 20
+  ultra_premium: 3      # New: ultra vs premium (including Grok)
   compact_compact: 40
   compact_mid: 30
   compact_large: 20
+  compact_premium: 3    # New: compact vs premium
   mid_mid: 30
   mid_large: 20
+  mid_premium: 2        # New: mid vs premium
   large_large: 20
+  large_premium: 2      # New: large vs premium
+  premium_premium: 1    # New: premium vs premium (expensive combinations)
 
-# Model Categories for Analysis
+# Model Categories for Analysis (Updated)
 tiers:
   ultra: ["tinyllama:latest", "qwen2:1.5b"]
   compact: ["gemma2:2b", "phi3:mini", "llama3.2:latest"]
   mid: ["mistral:instruct", "qwen:7b"]
   large: ["qwen3:latest"]
+  premium: ["claude-sonnet-4-remote", "o3-remote", "grok-remote"]  # Updated with Grok
 
-# Reflection Configuration
+# Reflection Configuration - No Token Limits!
 reflection:
-  ultra_token_limit: 80
-  standard_token_limit: 150
   structured_template: true
   validation_required: true
+  # Removed all token limits - let models reflect naturally
+
+# Cost Management (Updated for Azure AI Grok)
+cost_estimates:
+  grok_cost_per_1k_tokens: 0.020  # $0.02 per 1K tokens (estimated)
+  claude_cost_per_1k_tokens: 0.075
+  o3_cost_per_1k_tokens: 0.240
+  daily_budget_limit: 50.0        # $50/day limit
+  experiment_budget_limit: 200.0  # $200 total experiment limit
+
+# Provider Configuration (Updated)
+providers:
+  azure_ai:
+    base_url: "https://newsvendor-playground-resource.services.ai.azure.com/models"
+    models: ["grok-3-mini"]
+    api_version: "2024-05-01-preview"
+    rate_limit_rpm: 60        # 60 requests per minute (estimated)
+    rate_limit_tpm: 100000    # 100K tokens per minute (estimated)
+    
+  anthropic_bedrock:
+    models: ["claude-sonnet-4"]
+    rate_limit_rpm: 50
+    
+  azure_openai:
+    models: ["o3-mini"]
+    rate_limit_rpm: 30
