--- a/newsvendor-llm-experiment/pyproject.toml
+++ b/newsvendor-llm-experiment/pyproject.toml
@@ -35,6 +35,7 @@ python-dotenv = "^1.0.0"   # Environment variable management
 openai = "^1.88.0"
 azure-core = "^1.34.0"
 azure-ai-inference = "^1.0.0b9"
+dotenv = "^0.9.9"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
